--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
         <div class="header-title">
             <h2 class="subtitle-text">EXPLORE</h2>
             <h1 class="title-text">Norway</h1>
+            <div class="social">
+                <a href="#"><img src="./img/icons/facebook.svg" alt="facebook"></a>
+                <a href="#"><img src="./img/icons/twitter.svg" alt="twitter"></a>
+                <a href="#"><img src="./img/icons/instagram.svg" alt="instagram"></a>
+            </div>
         </div>
+        
         <div class="header-tips">
             <a href="#" class="tip">
                 <h4 class="tip-title">Trondheim</h4>
