--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Norway</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./libs/tiny-slider/tiny-slider.css">
 </head>
 <body>
     <header class="header">
@@ -13,18 +14,28 @@
             <div class="header-slider-item">
                 <img class="header-slider-img" src="./img/Rectangle.jpg" alt="bg1">
             </div>
-            <!-- <div class="header-slider-item">
-                <img class="header-slider-img" src="./img/Rectangle.jpg" alt="bg1">
+            <div class="header-slider-item">
+                <img class="header-slider-img" src="./img/landscape.jpg" alt="bg1">
             </div>
             <div class="header-slider-item">
-                <img class="header-slider-img" src="./img/Rectangle.jpg" alt="bg1">
+                <img class="header-slider-img" src="./img/124986.jpg" alt="bg1">
             </div>
             <div class="header-slider-item">
-                <img class="header-slider-img" src="./img/Rectangle.jpg" alt="bg1">
-            </div> -->
+                <img class="header-slider-img" src="./img/5384212.jpg" alt="bg1">
+            </div>
         </div>
-        <div class="header-slider-pagination"></div>
-        <div class="header-slider-controls"></div>
+        
+        <!-- Управление слайдером -->
+			<div class="header-slider-controls">
+                <div class="header-slider-controls__arrows">
+                    <button id="sliderPrev"><img src="./img/icons/arrow-left.svg" alt="Prev"></button>
+                    <button id="sliderNext"><img src="./img/icons/arrow-right.svg" alt="Next"></button>
+                </div>
+                <div class="header-slider-controls__count">
+                    <span class="header-slider-controls__count-current" id="sliderCurrent">0</span>
+                    / <span  id="sliderTotal">0</span>
+                </div>
+            </div>
 
         <div class="header-content">
         <div class="nav">
@@ -74,5 +85,7 @@
         <a href="#!" class="header-seemore">SEE MORE</a>
         
     </header>
+    <script src="./libs/tiny-slider/min/tiny-slider.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
